          libraries and caused Dos9 memory consumption to increase 
          dramatically when using SET /a intensively

        - Fixed typos with i18n.

        - Removed unnecessary config.h.in from repository.

        - Fixed GOTO command ignoring bAbortCommad.

        - Fixed command SHIFT that picked arguments in the wrong local var 
          blocks.

        - Fixed Dos9_Auto.bat man page that was in ANSI instead of utf-8.

TUESDAY 18TH, APRIL

        - Added new file searching functions to speed up file search under 
          windows.

        - Fixed buffering modes of TYPE and DIR command to speed up functions.

        - Fixed issues of both libinteval and libmatheval in determining 
          delimiters.

THURSDAY 20TH, APRIL

        - Fixed errors in unicodes files search functions.

        - Fixed FIND command for enhanced compatibility with cmd.exe.

        - Fixed manual pages.

        - Fixed some typos.

MONDAY 24TH, APRIL

        - Fixed errors in unicode file searching function and functions.

        - Fixed find to make it faster using file buffering potential.

        - Fixed the set command.

FRIDAY 5TH, MAY

        - Added support for concatenation using '+' with the the COPY command.

        - Added better support of variable trucating using numbers when Dos9 
          is explicitely compiled to deal with utf-8.

        - Fixed error messages and help messages.

        - Fixed manual pages.

FRIDAY 25TH, MAY

        - Fixed lots of little bugs

        - Fixed handling of stdin with the commands (especially resetting the 
          file flags after exit).

        - Fixed DEL and RMDIR.

        - Fixed File search functions.

        - Changed behaviour of the /C and /K switches.

        - Added support of more than 10 arguments through the use of the shift 
          command and the %+ variable.

        - Added WC command.

        - Added XARGS command.

        - Fixed man pages and i18n messages.
