@@ -1735,3 +1735,9 @@ ${for %%a in (*.exe) do echo %%a}
 	- Added XARGS command.
 	
 	- Fixed man pages and i18n messages.
+	
+{{Tuesday 30th, May}}
+
+	- Fixed dir search function for non-unicode and unicode versions.
+	
+	- Fixed pseudo-directory bug with if exist.
